# routes/categoryRoutes.js
@@ -5,10 +5,12 @@ const {
   getAllCategories,
   updateCategory,
   deleteCategory,
+  getCategoryById,
 } = require("../controllers/CategoryController");
 
 router.get("/allCategories", getAllCategories);
 router.post("/updateCategory", updateCategory);
 router.delete("/deleteCategory", deleteCategory);
+router.get("/getCategoryById", getCategoryById);
 
 module.exports = router;
